@@ -1,3 +1,7 @@
+2006-11-08  Sven Schuetz
+	* cimXmlOps.y, cimXmlParser.c:
+	Fixed 1592760 sfcb PROPERTY.ARRAY creation fails
+
 2006-11-07  Sven Schuetz
 	* objectImpl.h, objectImplSwapI32toP32.c, instance.c,
 	qualifier.c:
